part-2/project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project-namespace
  name: kube-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-project
  template:
    metadata:
      labels:
        app: kube-project
    spec:
      volumes: # Define volume
          - name: shared-image
            persistentVolumeClaim:
              claimName: image-claim
          - name: config-volume
            configMap:
              name: project-configmap
      containers:
        - name: backend
          image: ipegii/kube-project-backend:0.2.4
          volumeMounts: # Mount volume
          - name: shared-image
            mountPath: /usr/src/app/files
        - name: frontend
          image: ipegii/kube-project-frontend:0.2.1
          volumeMounts: # Mount volume
          - name: shared-image
            mountPath: /usr/src/app/files
