part-2/project/manifests/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project-namespace
  name: backend-svc
spec:
  type: ClusterIP
  selector:
    app: kube-project
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3001
