part-2/project/manifests/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  type: ClusterIP
  selector:
    app: kube-project
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
