part-2/project/manifests/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project-namespace
  name: postgres-svc
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: postgres
